
* Add Tests to the most important services and util methods
* Fix UI Layout Issues
* Test on Windows and/or Linux
* Analyse Heap Dump with lots of devices and actions



================================================================================
 I D E A S
================================================================================
* Split marshaling of device configs for memory performance on microcontrollers
* Disable Serial Communication Actions if No Connection is established
* Create Custom L&F with Synth or Nimbus
* Only fire association changed event if object was added/removed?
* Set Description and Color per Device
* Mark Device Type with Icons
* Sensors
	- Sensor Setup Panel
	- SensorAction starts when sensor fires (with offset and/or duration)
* Open/Close Panels
* Move logging to own window?
* Tabbed View (Setup, Shooting, Finish/Clean)
* Only send data if something changed since last send
* Setup Flashes without valves
* Empty valves (all, single, combination)
* Processing:
	o embed Comments, Tags to EXIF
	o embed the setup information in some kind of 'code' to EXIF
	o watch folder / distribution folder
	  example workflow: Camera -> watch folder -> Droplet -> distribution folder -> Lightroom
* Logging:
	o log comments, times, setup, ... per session into file
* Graphical View of one cycle
* Automatic Action Times:
	o Offset + Duration = min. Offset of the following Action
* Viscosity Factor:
	o Factor that adapts the action times of devices
* How to handle different raw formats in aspect of EXIF ???
* Add Key Shortcuts for the main actions
* Make language configurable


NEW FEATURES:
* Connect to serial port and show connection status
* Devices: Valve, Flash, Camera
* Setup 0..n Devices
* Actions: Offset Action, Duration Action
* Define 0..n Actions per Device
* Start one Cycle
* Begin New Droplet Setup
* Open/Save Droplet Setup
* Load as Template
* Simple Logging
* German translation
* Change Serial Communication Provider at runtime