@@ -51,7 +51,8 @@ public class SendAction extends AbstractSerialAction {
 
 		// cannot send no devices
 		if (getDroplet().getDevices().isEmpty()) {
-			JOptionPane.showMessageDialog(getFrame(), Messages.getString("SendAction.NoDevicesDefined"), Messages.getString("SendAction.NoDevices"), //$NON-NLS-1$ //$NON-NLS-2$
+			JOptionPane.showMessageDialog(getFrame(),
+					Messages.getString("SendAction.NoDevicesDefined"), Messages.getString("SendAction.NoDevices"), //$NON-NLS-1$ //$NON-NLS-2$
 					JOptionPane.WARNING_MESSAGE);
 			return;
 		}
@@ -65,7 +66,8 @@ public class SendAction extends AbstractSerialAction {
 			}
 		}
 		if (!foundAction) {
-			JOptionPane.showMessageDialog(getFrame(), Messages.getString("SendAction.NoEnabledActions"), Messages.getString("SendAction.NoActions"), //$NON-NLS-1$ //$NON-NLS-2$
+			JOptionPane.showMessageDialog(getFrame(),
+					Messages.getString("SendAction.NoEnabledActions"), Messages.getString("SendAction.NoActions"), //$NON-NLS-1$ //$NON-NLS-2$
 					JOptionPane.WARNING_MESSAGE);
 			return;
 		}
